Update default JVM options and System props
Motivation:

In Gatling 3.4.0, we are fixing our set of JVM options and System props.

Modifications:

Use the same set as gatling.sh, gatling.bat, gatling-maven-plugin, gatling-sbt and FrontLine.

Result:

Better default JVM tuning for better performance