@@ -3,21 +3,19 @@ package io.gatling.gradle
 trait JvmConfigurable {
 
     static final List<String> DEFAULT_JVM_ARGS = [
+        '-server',
         '-Xmx1G',
         '-XX:+HeapDumpOnOutOfMemoryError',
         '-XX:+UseG1GC',
-        '-XX:MaxGCPauseMillis=30',
-        '-XX:G1HeapRegionSize=16m',
-        '-XX:InitiatingHeapOccupancyPercent=75',
         '-XX:+ParallelRefProcEnabled',
-        '-XX:+PerfDisableSharedMem',
-        '-XX:+OptimizeStringConcat'
+        '-XX:MaxInlineLevel=20',
+        '-XX:MaxTrivialSize=12',
+        '-XX:-UseBiasedLocking'
     ]
 
-    static final Map DEFAULT_SYSTEM_PROPS = ["java.net.preferIPv4Stack": true, "java.net.preferIPv6Addresses": false]
+    static final Map DEFAULT_SYSTEM_PROPS = ["java.net.preferIPv6Addresses": true]
 
     List<String> jvmArgs
 
     Map systemProperties
-
 }
